@@ -5,7 +5,7 @@
 \title{(Weighted) Sample Quantiles}
 \usage{
 Quantile(x, weights = NULL, probs = seq(0, 1, 0.25), 
-         na.rm = FALSE, type = 7)
+         na.rm = FALSE, names = TRUE, type = 7, digits = 7)
 }
 \arguments{
   \item{x}{a numeric vector.}
@@ -17,7 +17,13 @@ Quantile(x, weights = NULL, probs = seq(0, 1, 0.25),
   \item{na.rm}{a logical indicating whether missing values in \code{x} should
     be omitted.}
 
-  \item{type}{an integer between 1 and 9 selecting one of the nine quantile algorithms detailed below to be used. Currently only \code{type=5} is implemented.}
+  \item{names}{logical; if true, the result has a \code{\link{names}} attribute. 
+      Set to \code{FALSE} for speedup with many \code{probs}.}
+
+  \item{type}{an integer between 1 and 9 selecting one of the nine quantile algorithms detailed below to be used. Currently only \code{types} \code{5} and \code{7} (default) are implemented.}
+  
+  \item{digits}{used only when \code{names} is true: the precision to use when formatting the percentages. In \code{R} versions up to 4.0.x, this had been set to \code{max(2, getOption("digits"))}, internally.}
+
 }
 
 %  \item{sorted}{a logical indicating whether the observations in \code{x} are
