@@ -15,13 +15,17 @@ UPDATED FUNCTIONS:
   * RevCode takes dots now, for reverse numeric codes.
   * Gmean will now report NA whenever there is a negative value in vector x, 
     despite if x also contains zero (like SAS, unlike SPSS).
-  * Quantile() was stripped of the argument "names"", which no longer had a 
-    meaning within the function body.
+  * Quantile() now uses the argument "names"", which so far had no 
+    meaning within the function body. 
   
 BUGFIXES:
   * JonckheereTest's formula interface will now also support additional 
     arguments.
   * Bug in Cohen Kappa SE calculation fixed.  
+  * Quantile's default type has been changed from type 5 to type 7, 
+    which was documented, but not implemented.
+  * PlotCorr() mislabeled the legend when breaks were specified (Credits for the
+    fix to Duncan Murdoch).  
 
 
 
